<resources>
    <string name="app_name">WeatherMate</string>
    <string name="search">Rechercher une ville</string>
    <string name="settings">Paramètres</string>
    <string name="next">Suivant</string>
    <string name="authorize">Autoriser</string>
    <string name="validate">Valider</string>
    <string name="setup_message">Vous allez suivre quelques étapes pour configurer votre application</string>
    <string name="welcome_message">Bienvenue sur WeatherMate</string>
    <string name="setup_units_message">Quelles unités de mesure préférez vous ?</string>
    <string name="celsius">Celsius/kmh</string>
    <string name="fahrenheit">Fahrenheit/Mph</string>
    <string name="setup_location_message">Nous avons besoin de la localisation du téléphone pour pouvoir continuer</string>
    <string name="parameters">Paramètres</string>
    <string name="unit_asking">Unités de mesures</string>
    <string name="synchro_google">Synchroniser la météo avec Google</string>
    <string name="synchronize">Synchronisation</string>
    <string name="wind_direction">Direction du vent</string>
    <string name="back">Retour arrière</string>
    <string name="map">Carte du monde</string>
</resources>